cabal-version:      2.4
name:               trackmonad
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: a small cli application for tracking time spent on a project/client. 

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license: "The GPLv3 License (GPLv3)"

-- The package author(s).
-- author: stefanh-it(https://github.com/stefanh-it)

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable trackmonad
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    TimeLogIO, CommonTypes, Config

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0, 
                      containers,
                      directory,
                      time
    hs-source-dirs:   app
    default-language: Haskell2010
